--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^1.3.4",
     "lottie-react": "^2.4.0",
     "next": "13.1.2",
+    "playwright": "^1.32.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.32.1",
     "dotenv-cli": "^7.0.0",
     "prisma": "^4.10.1",
     "typescript": "^5.0.2"
