--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@playwright/test": "^1.32.1",
     "dotenv-cli": "^7.0.0",
-    "prisma": "^4.10.1",
-    "typescript": "^5.0.2"
+    "prisma": "^4.10.1"
   }
 }
